# amazon-scraping-backend

./: .env.example  README.md  pyproject.toml
app/app/: settings.py  urls.py
app/scraping/: urls.py  views.py
