[project]
name = "amazon-scraping-backend"
version = "0.1.0"
description = "Amazon Scraping Backend"
authors = [{ name = "Alex", email = "rohmad.ew@gmail.com" }]
dependencies = [
    "django>=5.1",
    "pymongo>=4.8.0",
    "django-environ>=0.11.2",
    "django-cors-headers>=4.4.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "python app/manage.py runserver"
